# internal/api/api.go
@@ -10,7 +10,10 @@ import (
 )
 
 type App struct {
-	Product *handler.Producto
+	Product     *handler.Producto
+	ProductComp *handler.ProductoComp
+	Categoria   *handler.Categoria
+	FormaPago   *handler.FormaPago
 }
 
 func NewApp() *App {
@@ -21,11 +24,25 @@ func NewApp() *App {
 		slog.Error("Migration Error", slog.String("msg", err.Error()))
 		panic(err)
 	}
+	categoriaRepo := repo.NewCategoria(db)
+	categoriaSvc := services.NewCategoria(categoriaRepo)
+	categoriaHandler := handler.NewCategoria(categoriaSvc)
+
 	productRepo := repo.NewProducto(db)
-	productSvc := services.NewProducto(productRepo)
+	productSvc := services.NewProducto(productRepo, categoriaSvc)
 	productHandler := handler.NewProducto(productSvc)
+	productCompRepo := repo.NewProductoComp(db)
+	productCompSvc := services.NewProductoComp(productCompRepo)
+	productCompHandler := handler.NewProductoComp(productCompSvc)
+
+	formaPagoRepo := repo.NewFormaPago(db)
+	formaPagoSvc := services.NewFormaPago(formaPagoRepo)
+	formaPago := handler.NewFormaPago(formaPagoSvc)
 
 	return &App{
-		Product: productHandler,
+		Product:     productHandler,
+		Categoria:   categoriaHandler,
+		ProductComp: productCompHandler,
+		FormaPago:   formaPago,
 	}
 }
