# internal/api/handler/productoComp.go
@@ -11,9 +11,8 @@ import (
 	"gorm.io/gorm"
 )
 
-type Producto struct {
-	productoSvc services.IProducto
-	productoCompSvc services.IProductoComp
+type ProductoComp struct {
+	productoSvc services.IProductoComp
 }
 
 // GetProductsHandler godoc
@@ -21,9 +20,9 @@ type Producto struct {
 // @Tags products
 // @Accept json
 // @Produce json
-// @Success 200 {object} pkg.Body[[]types.Producto]
-// @Router /Product/GetAll [get]
-func (p *Producto) GetProductsHandler(w http.ResponseWriter, r *http.Request) {
+// @Success 200 {object} pkg.Body[[]types.ProductoCompuesto]
+// @Router /ProductComp/GetAll [get]
+func (p *ProductoComp) GetProductsHandler(w http.ResponseWriter, r *http.Request) {
 	products, err := p.productoSvc.GetProductos(r.Context())
 	if err != nil {
 		pkg.BadRequest(err.Error())
@@ -37,11 +36,10 @@ func (p *Producto) GetProductsHandler(w http.ResponseWriter, r *http.Request) {
 // @Accept json
 // @Produce json
 // @Param id path int true "Product ID"
-// @Success 200 {object} pkg.Body[types.Producto]
-// @Router /Product/GetByID/{id} [get]
-func (p *Producto) GetProductHandler(w http.ResponseWriter, r *http.Request) {
+// @Success 200 {object} pkg.Body[dto.ProductoComp]
+// @Router /ProductComp/GetByID/{id} [get]
+func (p *ProductoComp) GetProductHandler(w http.ResponseWriter, r *http.Request) {
 	id := pkg.GetIDFromUrl[uint](r)
-
 	product, err := p.productoSvc.GetProducto(r.Context(), id)
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
@@ -52,44 +50,22 @@ func (p *Producto) GetProductHandler(w http.ResponseWriter, r *http.Request) {
 	pkg.Response(w, http.StatusOK, product)
 }
 
-// UpdateProductHandler godoc
-// @Summary Update a product
-// @Tags products
-// @Accept json
-// @Produce json
-// @Param id path int true "Product ID"
-// @Param product body types.Producto true "Product data"
-// @Success 200 {object} pkg.Body[types.Producto]
-// @Router /Product/Update/{id} [post]
-func (p *Producto) UpdateProductHandler(w http.ResponseWriter, r *http.Request) {
-	product := new(types.Producto)
-	err := json.NewDecoder(r.Body).Decode(product)
-	if err != nil {
-		pkg.BadRequest(err.Error())
-	}
-	id := pkg.GetIDFromUrl[uint](r)
-	product, err = p.productoSvc.UpdateProducto(r.Context(), product, id)
-	if err != nil {
-		pkg.BadRequest(err.Error())
-	}
-	pkg.Response(w, http.StatusOK, product)
-}
-
 // CreateProductHandler godoc
-// @Summary Create a new product
+// @Summary Create a new productComp
 // @Tags products
 // @Accept json
 // @Produce json
-// @Param product body types.Producto true "Product data"
-// @Success 200 {object} pkg.Body[types.Producto]
-// @Router /Product/Create [post]
-func (p *Producto) CreateProductHandler(w http.ResponseWriter, r *http.Request) {
-	product := new(types.Producto)
+// @Param product body types.ProductoCompuesto true "Product data"
+// @Success 200 {object} pkg.Body[types.ProductoCompuesto]
+// @Router /ProductComp/Create [post]
+func (p *ProductoComp) CreateProductHandler(w http.ResponseWriter, r *http.Request) {
+	product := new(types.ProductoCompuesto)
 	err := json.NewDecoder(r.Body).Decode(product)
 	if err != nil {
 		pkg.BadRequest(err.Error())
 	}
 	err = p.productoSvc.CreateProducto(r.Context(), product)
+
 	if err != nil {
 		pkg.BadRequest(err.Error())
 	}
@@ -97,14 +73,14 @@ func (p *Producto) CreateProductHandler(w http.ResponseWriter, r *http.Request) 
 }
 
 // DeleteProductHandler godoc
-// @Summary Delete a product by ID
+// @Summary Delete a productComp by ID
 // @Tags products
 // @Accept json
 // @Produce json
 // @Param id path int true "Product ID"
 // @Success 200 {object} pkg.Body[string]
-// @Router /Product/DeleteByID/{id} [post]
-func (p *Producto) DeleteProductHandler(w http.ResponseWriter, r *http.Request) {
+// @Router /ProductComp/DeleteByID/{id} [post]
+func (p *ProductoComp) DeleteProductHandler(w http.ResponseWriter, r *http.Request) {
 
 	id := pkg.GetIDFromUrl[uint](r)
 	_, err := p.productoSvc.GetProducto(r.Context(), id)
@@ -121,8 +97,8 @@ func (p *Producto) DeleteProductHandler(w http.ResponseWriter, r *http.Request) 
 
 }
 
-func NewProducto(productoSvc services.IProducto) *Producto {
-	return &Producto{
+func NewProductoComp(productoSvc services.IProductoComp) *ProductoComp {
+	return &ProductoComp{
 		productoSvc: productoSvc,
 	}
 }
